LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -15548,7 +15548,7 @@ suggestions-configuration=Configuración de sugerencias
 suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Configuración del contribuidor de sugerencias
 suggestions-contributor-configuration-help=Establezca el JSON de configuración del contribuidor de sugerencias.
-suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Introduce el contributorName para el contribuidor de sugerencias, el displayGroupName con el texto de encabezado para mostrar y el tamaño para controlar el número máximo de resultados devueltos por el contribuidor.
 suggestions-were-deleted-successfully=Las sugerencias se eliminaron correctamente.
 suite=Conjunto de aplicaciones
 sum=Suma
