--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -7267,8 +7267,8 @@ go-to-this-version=Aller à cette version
 go-to-workspace=Aller à l'espace de travail
 go-to-x=Aller à {0}
 goal=Objectif
-google-analytics-4-custom-configuration=Google Analytics 4 Custom Configuration (Automatic Copy)
-google-analytics-4-id=Google Analytics 4 ID (Automatic Copy)
+google-analytics-4-custom-configuration=Configuration personnalisée de Google Analytics 4
+google-analytics-4-id=Identifiant Google Analytics 4
 google-analytics-create-custom-configuration=Configuration personnalisée uniquement de la création de méthode de Google Analytics
 google-analytics-custom-configuration=Configuration personnalisée de Google Analytics
 google-analytics-id=Identifiant Google Analytics
@@ -11607,7 +11607,7 @@ page-design-options=Options de design de page
 page-display-order=Page d'affichage de la commande
 page-edition-mode-x=Mode d'édition de pages : {0}
 page-editor-auto-extend-session-enabled-description=Activer cette option permettra d'étendre automatiquement la session quand l'éditeur de pages est ouvert.
-page-editor-autosaves-your-work=Page editor autosaves your work. (Automatic Copy)
+page-editor-autosaves-your-work=L'éditeur de page enregistre automatiquement votre travail.
 page-editor-configuration-name=Éditeur de pages
 page-editor-max-number-of-items-edit-mode-description=Le nombre maximal d'éléments affichés dans une collection est limité en mode Modifier, en raison des performances de rendu de la page. Cette limite n'affecte pas la visualisation de la collection dans la page publiée. Veuillez noter que l'augmentation de cette valeur peut avoir un impact négatif sur les performances du mode Modifier d'une page de contenu.
 page-elements=Éléments de la page
@@ -11676,7 +11676,7 @@ pages-option=Option des pages
 pages-options=Options des pages
 pages-to-export=Pages à exporter
 pages-to-publish=Pages à publier
-pages-type=Pages Type (Automatic Copy)
+pages-type=Type de pages
 pages-variations-help=Les variantes de pages de site vous permettent de travailler en parallèle les différentes versions des page du site. Les contenus sont partagés à toutes les variantes de pages de site. La publication en production de n'importe quelles variantes de page de site peut être planifiée ou lancée manuellement.
 pages-with-tag-x=Pages avec l'étiquette <em>{0}</em>.
 pages-with-x-x=Pages avec {0} <em>{1}</em>.
@@ -13232,7 +13232,7 @@ reminder=Rappel
 reminder-email=Email de rappel
 reminder-queries=Questions de rappel
 reminder-query-and-answer-cannot-be-empty=La question et la réponse de rappel ne peuvent pas être vides.
-reminder-query-answer=Reminder Query Answer (Automatic Copy)
+reminder-query-answer=Réponse à la question de rappel
 reminder-query-question=Question de rappel
 reminders=Rappels
 remote=A distance
@@ -14320,7 +14320,7 @@ select-the-scope-of-the-action-that-this-role-can-perform-on-the-portal=Sélecti
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x=Sélectionner la portée que l'action que ce rôle peut effectuer sur le <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-portlet=Sélectionner la portée de l'action que ce rôle peut effectuer sur l'application <em>{0}</em>.
 select-the-scope-of-the-action-that-this-role-can-perform-on-the-x-resource=Sélectionner la portée de l'action que ce rôle peut effectuer sur la ressource <em>{0}</em>.
-select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Select the scope of your segment to specify where it can be used. It will not be possible to modify the scope after the segment is saved. (Automatic Copy)
+select-the-scope-of-your-segment-to-specify-where-it-can-be-used=Sélectionnez la portée de votre segment pour spécifier où il peut être utilisé. Il ne sera pas possible de modifier la portée après l'enregistrement du segment.
 select-the-searchable-types-description=Sélectionnez les types interrogeables. Si aucun type n'est sélectionné, tous les types interrogeables (actifs et objets) seront recherchés.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-portlet=Sélectionner les sites où le rôle peut exécuter <em>{0}</em> actions sur le portlet {1}.
 select-the-sites-where-this-role-can-perform-the-x-action-on-the-x-resource=Sélectionner les sites où le rôle peux exécuter l'action <em>{0}</em> sur la ressource {1}.
@@ -14525,8 +14525,8 @@ set-the-discount-amount-and-the-discount-type=Définissez le montant et le type 
 set-the-display-order-of-child-pages=Définir l'ordre d'affichage des pages filles.
 set-the-display-order-of-news-feeds=Définir l'ordre d'affichage des flux de nouvelles.
 set-the-following-values-to-filter-emails-associated-with-an-email-address-to-a-folder=Définir les valeurs suivantes pour filtrer les adresses Email associées avec d'autres adresses Email dans un répertoire.
-set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Set the Google Analytics 4 custom options that are used for this set of pages. (Automatic Copy)
-set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Set the Google Analytics 4 ID that is used for this set of pages. (Automatic Copy)
+set-the-google-analytics-4-custom-options-that-are-used-for-this-set-of-pages=Définissez les options personnalisées de Google Analytics 4, qui sont utilisées pour ce jeu de pages.
+set-the-google-analytics-4-id-that-is-used-for-this-set-of-pages=Définir l'identifiant de Google Analytics 4 qui sera utilisé pour cet ensemble de pages.
 set-the-google-analytics-create-custom-options-that-are-used-for-this-set-of-pages=Définissez les options personnalisées de la création de méthode de Google Analytics, qui sont utilisées pour ce jeu de pages.
 set-the-google-analytics-custom-options-that-are-used-for-this-set-of-pages=Définissez les options personnalisées de Google Analytics, qui sont utilisées pour ce jeu de pages.
 set-the-google-analytics-id-that-is-used-for-this-set-of-pages=Définir l'identifiant de Google Analytics qui sera utilisé pour cet ensemble de pages.
@@ -16469,7 +16469,7 @@ the-format-of-this-page-is-not-supported-the-page-content-will-be-shown-unformat
 the-fragment-can-no-longer-be-added-because-it-has-been-deleted=Le fragment ne peut plus être ajouté parce qu'il a été supprimé.
 the-fragment-entry-cannot-be-deleted-because-it-is-required-by-one-or-more-page-templates=L'entrée de fragment ne peut être supprimée parce qu'elle est nécessaire pour un ou plusieurs modèles de page.
 the-fragment-entry-could-not-be-found=L'entrée de fragment est introuvable.
-the-fragment-was-copied-successfully=The fragment was copied successfully. (Automatic Copy)
+the-fragment-was-copied-successfully=Le fragment a été copié avec succès.
 the-framework-version-could-not-be-found=La version du framework n'a pas pu être trouvée.
 the-friendly-url-exceeds-the-limit-of-x-characters-in-its-encoded-format.-please-enter-a-shorter-url=L'URL conviviale dépasse la limite de {0} caractères dans son format codé. Veuillez saisir une URL plus courte.
 the-friendly-url-generated-by-the-email-address-you-requested-may-conflict-with-an-existing-friendly-url=L'URL conviviale générée par l'adresse email que vous avez demandée peut rentrer en conflit avec une URL conviviale existante.
