--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -2245,7 +2245,7 @@ b2x=B2X (Automatic Translation)
 back=Înapoi
 back-to-cart=Înapoi la Coș (Automatic Translation)
 back-to-menu=Înapoi la Meniu (Automatic Translation)
-back-to-parent-configuration=Back to Parent Configuration (Automatic Copy)
+back-to-parent-configuration=Înapoi la configurația principală
 back-to-search=Înapoi la Căutare
 back-to-selection=Înapoi la Selecție (Automatic Translation)
 back-to-the-list=Back to the List (Automatic Copy)
