LPS-170291 Build lang

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=النمط
 pattern-help-message=يجب أن يحدد كل نمط العبارة العادية المراد مطابقتها كعبارة عادية.
 patterns=أنماط
 patterns-description=عيّن الأنماط لمطابقة الطلبات بالنطاقات اللازمة (method regex::path regex::scope1,scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=توقف
 paused=متوقف مؤقتًا
 pay-now=تشغيل الآن
