--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Модели (Automatic Translation)
 patterns-description=Задайте шаблоните за съответстващи заявки към необходимите обхвати (метод на regex::p ath regex::scope1, scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Пауза
 paused=Пауза (Automatic Translation)
 pay-now=Плати сега (Automatic Translation)
