--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=vzory (Automatic Translation)
 patterns-description=Nastavte vzory pro porovnávání požadavků s potřebnými obory (regex metody::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pauza
 paused=Pozastaveno (Automatic Translation)
 pay-now=Zaplatit nyní (Automatic Translation)
