--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=mønstre (Automatic Translation)
 patterns-description=Angiv mønstrene for sammenholdelse af anmodninger til de nødvendige områder (metoderegex::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pause (Automatic Copy)
 paused=Standsede (Automatic Translation)
 pay-now=Betal nu (Automatic Translation)
