--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -11789,6 +11789,7 @@ pattern-field-label=Muster
 pattern-help-message=Jedes Muster sollte den regulären Ausdruck, der abgeglichen werden soll, als regulären Ausdruck angeben.
 patterns=Muster
 patterns-description=Legen Sie die Muster für die Übereinstimmung von Anfragen für die erforderlichen Bereiche fest (Methode regex::path regex::scope1,scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pausieren
 paused=Angehalten
 pay-now=Jetzt bezahlen
