--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Μοτίβα (Automatic Translation)
 patterns-description=Ορίστε τα μοτίβα για την αντιστοίχιση αιτήσεων στα απαραίτητα πεδία (μέθοδος regex::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Παύση
 paused=Παύση (Automatic Translation)
 pay-now=Πληρώστε τώρα (Automatic Translation)
