--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -11789,6 +11789,7 @@ pattern-field-label=Patrón
 pattern-help-message=Cada patrón debe especificar una expresión regular que coincida.
 patterns=Patrones
 patterns-description=Establezca los patrones para peticiones coincidentes para los ámbitos necesarios (método regex::ruta regex::ámbito1,ámbito2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pausa
 paused=Pausada
 pay-now=Pagar ahora
