--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -11786,6 +11786,7 @@ pattern-field-label=Kuvio
 pattern-help-message=Kunkin kuvion tulisi määrittää säännöllinen lauseke, joka täsmätään säännöllisenä lausekkeena.
 patterns=Kuviot
 patterns-description=Asettaa kuviot vastaaville pyynnöille välttämättömiin soveltamisaloihin (metodi regex::path regex::scope1,scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Keskeytä
 paused=Keskeytetty
 pay-now=Maksa Nyt
