--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -11789,6 +11789,7 @@ pattern-field-label=Modèle
 pattern-help-message=Chaque modèle doit spécifier l'expression normale à faire correspondre en tant qu'expression normale.
 patterns=Schémas
 patterns-description=Définissez les schémas pour les requêtes avec correspondance pour les portées nécessaires (méthode regex::chemin regex::portée1,portée2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pause
 paused=En pause
 pay-now=Payer maintenant
