--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Schémas
 patterns-description=Définissez les schémas pour les requêtes avec correspondance pour les portées nécessaires (méthode regex::chemin regex::portée1,portée2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pause
 paused=En pause
 pay-now=Payer maintenant
