--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=पैटर्न (Automatic Translation)
 patterns-description=आवश्यक दायरे (विधि रेगेक्स: :p थ रेगेक्स:::scope1,scope2) के अनुरोधों के मिलान के लिए पैटर्न सेट करें। (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=विराम दें
 paused=रोका (Automatic Translation)
 pay-now=अब भुगतान करें (Automatic Translation)
