--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -11790,6 +11790,7 @@ pattern-field-label=Minta
 pattern-help-message=Az egyes minták meghatározzák azt a reguláris kifejezést, amelyre reguláris kifejezésként egyezéseket keresünk.
 patterns=Minták
 patterns-description=Állítsa be az összehasonlítási kérelmek mintáit a szükséges kiterjedésekhez (a módszer regex::útvonal regex::kiterjedés1,kiterjedés2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Szünet
 paused=Szüneteltetve
 pay-now=Fizetés most
