--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Pola (Automatic Translation)
 patterns-description=Atur pola untuk permintaan yang cocok ke lingkup yang diperlukan (metode regex::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Berhenti sebentar
 paused=Berhenti (Automatic Translation)
 pay-now=Bayar Sekarang (Automatic Translation)
