--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=דפוסים
 patterns-description=הגדר את הדפוסים עבור בקשות מתאימות להיקפים הנדרשים (מתודה regex::path regex::scope1,scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=הפסקה
 paused=מושהה (Automatic Translation)
 pay-now=שלם עכשיו
