--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -11789,6 +11789,7 @@ pattern-field-label=パターン
 pattern-help-message=各パターンには、正規表現として一致させる正規表現を指定してください。
 patterns=パターン
 patterns-description=必要なスコープにリクエストをマッチさせるためのパターンを設定します (メソッド regex::パス regex::スコープ1,スコープ2)。
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=一時停止
 paused=一時停止中
 pay-now=すぐに支払う
