--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Modelius (Automatic Translation)
 patterns-description=Nustatykite reikiamų aprėpčių gretinimo šablonus (metodas regex::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pristabdyti (Automatic Translation)
 paused=Pristabdytas (Automatic Translation)
 pay-now=Mokėti dabar (Automatic Translation)
