--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Corak (Automatic Translation)
 patterns-description=Tetapkan corak untuk permintaan yang sepadan dengan skop yang diperlukan (regex kaedah::p atath regex::skop1,skop2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Jeda (Automatic Translation)
 paused=Dijeda (Automatic Translation)
 pay-now=Bayar Sekarang (Automatic Translation)
