--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Mønstre
 patterns-description=Angi mønstrene for å samsvare forespørsler med de nødvendige virkeområdene (metode regex::sti regex::virkeområde1,virkeområde2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Sett på pause (Automatic Translation)
 paused=Midlertidig stanset (Automatic Translation)
 pay-now=Betal nå (Automatic Translation)
