--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -11790,6 +11790,7 @@ pattern-field-label=Patroon
 pattern-help-message=Elk patroon moet de te matchen reguliere expressie specificeren.
 patterns=Patronen
 patterns-description=Stel de patronen in om verzoeken te laten overeenstemmen met de nodige toepassingsgebieden (methode regex::pad regex::toepassingsgebied1,toepassingsgebied2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pauze
 paused=Gepauzeerd
 pay-now=Nu betalen
