--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Wzorców (Automatic Translation)
 patterns-description=Ustaw wzorce dopasowywania żądań do niezbędnych zakresów (metoda regex::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pauza
 paused=Wstrzymana (Automatic Translation)
 pay-now=Zapłać teraz (Automatic Translation)
