--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Padrão
 pattern-help-message=Cada padrão deve especificar a expressão regular para corresponder a uma expressão regular.
 patterns=Padrões
 patterns-description=Defina os padrões para que correspondam as solicitações aos escopos necessários (método regex::path regex::scope1,scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pausa
 paused=Em pausa
 pay-now=Pagar Agora
