--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Mönster
 pattern-help-message=Varje mönster bör ange det vanliga uttrycket som ska matchas som ett vanligt uttryck.
 patterns=Mönster
 patterns-description=Ange mönster för matchningsförfrågningar till nödvändiga omfång (method regex::path regex::scope1,scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Paus
 paused=Pausat
 pay-now=Betala nu
