--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Patterns (Automatic Copy)
 patterns-description=தேவையான scopes-களுக்கு பொருந்தும் request-களை அமைத்தல் (method regex:: path regex:: scope1, scope2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=நிறுத்தம்
 paused=Paused (Automatic Copy)
 pay-now=Pay Now (Automatic Copy)
