--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=รูปแบบ
 patterns-description=ตั้งค่ารูปแบบสำหรับคำขอที่ตรงกับขอบเขตที่จำเป็น (เมธอด regex::path regex::scope1,scope2)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=หยุดชั่วคราว
 paused=หยุดชั่วคราว
 pay-now=จ่ายตอนนี้
