--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Desen (Automatic Translation)
 patterns-description=İstekleri gerekli kapsamlarla eşleştirmek için desenleri ayarlayın (yöntem regex::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Duraklat
 paused=Duraklatıldı (Automatic Translation)
 pay-now=Şimdi Öde (Automatic Translation)
