--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Моделей (Automatic Translation)
 patterns-description=Встановіть шаблони для зіставлення запитів з необхідними областеями (формальний вираз методу::p ath regex::scope1,область видимості2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Пауза
 paused=Призупинено (Automatic Translation)
 pay-now=Оплатити зараз (Automatic Translation)
