--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Mẫu (Automatic Translation)
 patterns-description=Đặt các mẫu cho các yêu cầu phù hợp với phạm vi cần thiết (phương thức regex::p ath regex::scope1,scope2). (Automatic Translation)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Tạm dừng
 paused=Tạm dừng (Automatic Translation)
 pay-now=Thanh toán ngay (Automatic Translation)
