--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -11789,6 +11789,7 @@ pattern-field-label=模式
 pattern-help-message=每个模式都应该指定要作为正则表达式匹配的正则表达式。
 patterns=模式
 patterns-description=将匹配请求的模式设置为所需作用域（方法 regex::path regex::scope1,scope2）。
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=暂停
 paused=已暂停
 pay-now=立即支付
