--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -11789,6 +11789,7 @@ pattern-field-label=Patró
 pattern-help-message=Cada patró ha d'especificar una expressió regular que coincideixi.
 patterns=Patrons
 patterns-description=Establiu els patrons per a sol·licituds coincidents per als àmbits necessaris (mètode regex::camí regex::àmbit1,àmbit2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pausa
 paused=En pausa
 pay-now=Paga ara
