--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_CO.properties
@@ -11789,6 +11789,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Patrones
 patterns-description=Establezca los patrones para peticiones coincidentes para los ámbitos necesarios (método regex::ruta regex::ámbito1,ámbito2).
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pausa
 paused=Pausada
 pay-now=Pagar ahora
