--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_kk.properties
@@ -11787,6 +11787,7 @@ pattern-field-label=Pattern (Automatic Copy)
 pattern-help-message=Each pattern should specify the regular expression to be matched as a regular expression. (Automatic Copy)
 patterns=Patterns (Automatic Copy)
 patterns-description=Set the patterns for matching requests to the necessary scopes (method regex::path regex::scope1,scope2). (Automatic Copy)
+patterns-must-be-valid-regular-expressions=Patterns must be valid regular expressions. (Automatic Copy)
 pause=Pause (Automatic Copy)
 paused=Paused (Automatic Copy)
 pay-now=Pay Now (Automatic Copy)
